--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,22 @@
 <resources>
+    <!-- Input Strings -->
     <string name="app_name">DMHelper</string>
-    <string name="enter_password">Password</string>
-    <string name="enter_password">Password</string>
-    <string name="enter_username">Username</string>
+    <string name="password">Password</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="confirm_password">Confirm Password</string>
+
+    <!--  Button Strings -->
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+
+    <!--  Title Strings -->
+    <string name="join_us">Join Us</string>
+    <string name="welcome">Welcome</string>
+
+    <!--  Paragraph Strings -->
+    <string name="navigate_login">No account yet? Register!</string>
+    <string name="navigate_register">Already have an account? Login!</string>
+    <string name="password_toggle">Password Toggle</string>
+
 </resources>
